# ficsolver

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/ficsolver/: graph.py  main.py  models.py  parser.py  solver.py
backend/tests/: test_api.py  test_budget_checker.py  test_graph.py  test_health.py  test_parser.py  test_solve_endpoint.py  test_solver_phase1.py  test_solver_phase2.py
backend/tests/fixtures/: e2e-game-data.json  game_data.py
docs/: Modular Frame.xlsx  Satisfactory Calculator.md
frontend/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  state.test.ts  state.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: AlternatesPanel.test.tsx  AlternatesPanel.tsx  ChainCard.test.tsx  ChainCard.tsx  InputsPanel.test.tsx  InputsPanel.tsx  ItemCombobox.test.tsx  ItemCombobox.tsx  OutputsPanel.test.tsx  OutputsPanel.tsx  ResultsView.test.tsx  ResultsView.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx
