[project]
name = "ficsolver"
version = "0.1.0"
description = "Satisfactory factory chain calculator — backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "networkx>=3.4",
    "numpy>=2.1",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ficsolver"]

# ---------------------------------------------------------------------------
# Ruff — formatting + linting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ficsolver"]

# ---------------------------------------------------------------------------
# mypy — strict static analysis
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ficsolver --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ficsolver"]
omit = ["tests/*", "src/ficsolver/models*", "src/ficsolver/*/models.py"]
